fix dailycode and update required assets for linear-algebra

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Trung Viet # the main title
 
-tagline: Welcome to my realm # it will display as the sub-title
+tagline: Welcome to my realm.. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   This is my personal blog. I write about my life, my thoughts, and my experiences
